<resources>
    <string name="app_name">FragmentStyle</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment</string>

</resources>
